src/styles/globals/_text-block.css
.text-block {
    --text-block-display: grid;
    --text-block-grid-template-columns: 1fr;
    --text-block-grid-gap: var(--content-spacing-between-columns);
    --text-block-width: var(--content-width-with-padding);
    --text-block-max-width: var(--content-medium-max-width);
    --text-block-margin: var(--spacing-between-consecutive-elements-normal) auto 0;
    --text-block-image-aspect-ratio: auto;
    --text-block-figure-border-radius: var(--border-radius-default);
    --text-block-image-object-fit: cover;
    --text-block-image-transform: scale(1);
    --text-block-image-transition: var(--focus-image-transform-transition);
    --text-block-media-inside-image-width: 50%;
    --text-block-media-inside-offset: calc(100% / 8);
    --text-block-column-display: block;
    --text-block-column-grid-template-columns: unset;
    --text-block-column-gap: var(--spacing-m);
    --text-block-overflow: visible;
    --text-block-z-index: var(--z-index-content);

    display: var(--text-block-display);
    grid-template-columns: var(--text-block-grid-template-columns);
    grid-gap: var(--text-block-grid-gap);
    width: var(--text-block-width);
    max-width: var(--text-block-max-width);
    margin: var(--text-block-margin);
    overflow: var(--text-block-overflow);
    z-index: var(--text-block-z-index);
}

.text-block[text-block-column-count="1"] {
    --text-block-max-width: var(--content-max-width);
}

.html-container .text-block {
    --text-block-width: 100%;
}

.text-block:first-child,
span:first-child + .text-block {
    --text-block-margin: 0 auto;
}

:is(.text-block, .media-grid, .details-accordion) + .text-block {
    --text-block-margin: var(--spacing-between-consecutive-elements-normal) auto 0;
}

.details .text-block {
    margin: 0;
    width: 100%;
}

.grid .text-block {
    --text-block-width: var(--content-fullwidth);
    --text-block-max-width: var(--content-fullwidth);
}

.accordion .text-block {
    --text-block-width: 100%;
}

.text-block[text-block-column-count="2"],
.text-block[text-block-column-count="3"],
.text-block[text-block-column-count="4"] {
    --text-block-max-width: var(--content-wide-max-width);
}

.text-block__figure {
    position: relative;
    margin: 0;
    height: fit-content;
    overflow: hidden;
    border-radius: var(--text-block-figure-border-radius);
}

.text-block__figure:has(a:is(:hover, :focus-visible)) {
    --text-block-image-transform: var(--focus-image-transform);
}

.text-block__figure:has(a:focus-visible) {
    outline: var(--focus-outline-width) solid var(--focus-outline-color);
    outline-offset: var(--focus-outline-offset);
}

.text-block__image {
    transform: var(--text-block-image-transform);
    transition: var(--text-block-image-transition);
}

.text-block__image,
.text-block__figure .video {
    aspect-ratio: var(--text-block-image-aspect-ratio);
    object-fit: var(--text-block-image-object-fit);
    height: auto;
    width: 100%;
}

.text-block__image--square {
    --text-block-image-aspect-ratio: var(--aspect-ratio-square);
}

.text-block__image--4-3 {
    --text-block-image-aspect-ratio: var(--aspect-ratio-4-3);
}

.text-block__image--16-9 {
    --text-block-image-aspect-ratio: var(--aspect-ratio-16-9);
}

.text-block__image--golden {
    --text-block-image-aspect-ratio: var(--aspect-ratio-golden);
}

.text-block__figcaption {
    font-family: var(--font-family-text);
    font-size: var(--font-size-s);
    color: var(--color-font);
    padding: var(--spacing-s) 0;
}

.text-block__content > *:first-child,
.text-block__content > :is(h1, h2, h3, h4, h5):first-child {
    margin-top: 0;
}

.details .text-block__content:first-child {
    --text-block-column-gap: 0;
}

@media screen and (min-width: 768px) {
    .text-block[text-block-media-position="beside-right"] .text-block__figure {
        grid-column: 2;
    }

    .text-block[text-block-media-position="beside-right"] .text-block__content {
        grid-column: 1;
    }

    /* TEXT BLOCK MEDIA INSIDE */
    .text-block[text-block-media-position*="inside"] .text-block__figure {
        width: var(--text-block-media-inside-image-width);
        margin-bottom: calc(var(--text-block-grid-gap) / 2);
    }

    .text-block[text-block-media-position="inside-left"] .text-block__figure {
        float: left;
        padding-right: calc(var(--text-block-grid-gap) / 2);
        margin-right: calc(var(--text-block-grid-gap) / 2) !important;
    }

    .text-block[text-block-media-position="inside-left"] .text-block__content {
        padding-left: var(--text-block-media-inside-offset);
    }

    .text-block[text-block-media-position="inside-right"] .text-block__figure {
        float: right;
        padding-left: calc(var(--text-block-grid-gap) / 2);
        margin-left: calc(var(--text-block-grid-gap) / 2) !important;
    }

    .text-block[text-block-media-position="inside-right"] .text-block__content {
        padding-right: var(--text-block-media-inside-offset);
    }
}

@media screen and (min-width: 840px) {
    .text-block[text-block-column-count="2"],
    .text-block[text-block-column-count="4"] {
        --text-block-grid-template-columns: 1fr 1fr;
    }

    .text-block[text-block-third-direction="left"] {
        --text-block-grid-template-columns: 1fr 2fr;
    }

    .text-block[text-block-third-direction="right"] {
        --text-block-grid-template-columns: 2fr 1fr;
    }

    .text-block[text-block-column-count="3"] {
        --text-block-grid-template-columns: 1fr 1fr 1fr;
    }
}

@media screen and (min-width: 1200px) {
    .text-block[text-block-column-count="4"] {
        --text-block-grid-template-columns: 1fr 1fr 1fr 1fr;
    }

    .details .text-block[text-block-media-position="inside-right"] .text-block__figure + .text-block__content {
        margin-left: 0;
        padding-left: var(--spacing-m);
    }

    .details .text-block[text-block-media-position="inside-right"] .text-block__content {
        margin-left: 0;
        margin-right: 0;
        padding-left: var(--spacing-m);
        padding-right: var(--spacing-m);
    }
}

